# metagen

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MODEL_LICENSE.md  Makefile  PROGRESS.md  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
agent_instructions/: CONTEXT.md  GAP_ANALYSIS.md  PHASE_0_ALIGN_STABILITY.md  PHASE_1_TEXT.md  PHASE_2_VISION.md  PHASE_3_TABULAR_TIME_SERIES_GRAPH.md  PHASE_4_AUDIO_VIDEO_MULTIMODAL.md  README.md  ROADMAP_BACKLOG.md
assets/: generate_figures.py  logo.txt
assets/diagrams/: automl.txt  modalities.txt  pipeline.txt
docs/: README.md  ROADMAP.md  roadmap-extended-models.md
docs/2026/: TASKS.md  evolution-plan.md
docs/development/: architecture_v2.md  testing_strategy.md  trainable_models_spec.md
docs/project/: meta_gen_coding_agent_specification.md  roadmap.md
docs/reference/: architecture.md  cli.md  specs.md
docs/tutorials/: 01_first_synthesis.md  02_custom_spec.md  03_architecture_search.md
docs/user-guide/: automl_guide.md  benchmarks.md  faq.md  multi_modal.md  paper.md  quickstart.md  spec_language.md
examples/: bench_batch.py
examples/data/: prepare_shakespeare.py
examples/experiments/: task1_text_classification.yaml  task2_text_generation.yaml  task3_image_classification.yaml  task4_image_generation.yaml  task5_audio_generation.yaml  task6_video_understanding.yaml  task7_multimodal_retrieval.yaml  task8_edge_deployment.yaml
examples/notebooks/: 01_quickstart.ipynb  02_automl_search.ipynb  03_multi_modal.ipynb
examples/scripts/: run_automl_search.py
examples/specs/: anomaly_detector_autoencoder.yaml  document_ranker.yaml  image_classifier_resnet.yaml  image_diffusion_small.yaml  image_vit_base.yaml  instance_segmentation_maskrcnn.yaml  object_detector_detr.yaml  object_detector_yolo.yaml  semantic_segmentation_unet.yaml  sentence_embedder.yaml  tabular_regressor.yaml  text_classifier_bert.yaml  text_llm_tiny.yaml  time_series_forecaster.yaml  video_generation.yaml
examples/specs/3d/: 3d_text_to_mesh.yaml
examples/specs/audio/: audio_musicgen.yaml  audio_musicgen_like.yaml
examples/specs/graph/: graph_classifier_gat.yaml  recommender_two_tower.yaml
examples/specs/image/: image_classifier_resnet.yaml  image_diffusion_sdxl_like.yaml  image_diffusion_small.yaml  image_vit_base.yaml  instance_segmentation_maskrcnn.yaml  object_detector_detr.yaml  object_detector_yolo.yaml  semantic_segmentation_unet.yaml
examples/specs/misc/: taste_generation.yaml
examples/specs/multimodal/: multimodal_clip.yaml
examples/specs/rl/: rl_agent_dqn.yaml  rl_agent_ppo.yaml
examples/specs/tabular/: tabular_regressor.yaml
src/metagen/: __init__.py  cli.py
tests/: test_architecture.py  test_audio_modality.py  test_cache.py  test_cli.py  test_codegen.py  test_data_gen.py  test_engine.py  test_evaluation.py  test_experiments.py  test_history.py  test_image_modality.py  test_integration.py  test_loader.py  test_meta_learner.py  test_modality_base.py  test_modality_registry.py  test_multimodal_modality.py  test_objectives.py  test_paper_figures.py  test_paper_gen.py  test_performance.py  test_prototype_trainer.py  test_refiner.py  test_sample_data.py  test_schema.py  test_search_engine.py  test_seed.py  test_supplementary_gen.py  test_synthetic_data.py  test_task_handlers.py  test_task_registry.py  test_text_modality.py  test_train_fallbacks.py  test_training.py  test_transfer_learning.py  test_video_modality.py
(+120 files in other folders)
